# te-net-examples

./: .gitignore  justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: image-dev.yaml
config/pipeline/qf/: 10_design.yaml  11_generate.yaml  12_preprocess.yaml  13_te_estimate.yaml  14_graph_select.yaml  15_metrics.yaml  16_report_figures.yaml  17_generate_rich.yaml  18_oracle_preprocess.yaml  19_oracle_vs_estimated.yaml  20_report_compare.yaml  21_build_signal.yaml  22_cs_tstat.yaml  23_report_signal.yaml  24_report_pretty.yaml  80_paper_artifacts.yaml  81_paper_figures.yaml  90_pack_out.yaml  99_publish_assets.yaml
scripts/pipeline/qf/: 01_meta.py  02_universe.py  03_features.py  04_portfolio_sort.py  05_cs_ols.py  06_report.py  07_compare.py  08_specs.py  09_figures.py  10_design.py  11_generate.py  12_preprocess.py  13_te_estimate.py  14_graph_select.py  15_metrics.py  16_report_figures.py  17_generate_rich.py  18_oracle_preprocess.py  19_oracle_vs_estimated.py  20_report_compare.py  21_build_signal.py  22_cs_tstat.py  23_report_signal.py  24_report_pretty.py  80_paper_artifacts.py  81_paper_figures.py
scripts/tools/: find_last.py
src/te_net_examples/io/: README.md  csv.py  json.py  jsonl.py  parquet.py  yaml.py
src/te_net_examples/pipeline/: qf_02_universe.py  qf_03_features.py  qf_04_portfolio_sort.py  qf_05_cs_ols.py  qf_06_report.py  qf_07_compare.py  qf_08_specs.py  qf_09_figures.py  qf_10_design.py  qf_11_generate.py  qf_12_preprocess.py  qf_13_te_estimate.py  qf_14_graph_select.py  qf_15_metrics.py  (+11 more)
(+13 files in other folders)
