[project]
name = "te-net-examples"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "te-net-lib",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
te-net-lib = { git = "https://github.com/yifen9/te-net-lib", rev = "f70c002" }
